[gd_scene load_steps=14 format=3 uid="uid://bgtgn0gc0oio5"]

[ext_resource type="Script" uid="uid://b5ucth5pn7n4p" path="res://scenes/game.gd" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://cnf1d81bvh4t4" path="res://scenes/Player.tscn" id="2_lnu2h"]
[ext_resource type="AudioStream" uid="uid://ctjeksixgms1m" path="res://music/Pixelated Dreams.mp3" id="3_lnu2h"]
[ext_resource type="AudioStream" uid="uid://dnc1b3wc6xf0r" path="res://music/game_over_mono.wav" id="4_iywne"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_yqjtg"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_lnu2h"]
sky_material = SubResource("ProceduralSkyMaterial_yqjtg")

[sub_resource type="Environment" id="Environment_lbhrr"]
background_mode = 2
sky = SubResource("Sky_lnu2h")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yqjtg"]
albedo_color = Color(0.407843, 1, 1, 1)

[sub_resource type="QuadMesh" id="QuadMesh_yqjtg"]
material = SubResource("StandardMaterial3D_yqjtg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lbhrr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iywne"]
bg_color = Color(0.585062, 0.585062, 0.585062, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p57ef"]
bg_color = Color(0.442911, 0.442911, 0.442911, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5sy4"]
bg_color = Color(0.654902, 0.654902, 0.654902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Game" type="Node3D" node_paths=PackedStringArray("player")]
script = ExtResource("1_lnu2h")
player = NodePath("Player")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 3.38118, -3.5789)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lbhrr")

[node name="Player" parent="." instance=ExtResource("2_lnu2h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.42998, 0, 5)
fov = 69.1995

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(28.665, 0, 0, 0, 10.5, 0, 0, 0, 8.75, -5.875, 0, -2)
mesh = SubResource("QuadMesh_yqjtg")

[node name="InGame" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_lnu2h")
volume_db = -16.0

[node name="GameOver" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_iywne")
volume_db = -10.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.5
offset_top = -167.0
offset_right = 231.5
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="UI/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_lbhrr")
theme_override_styles/hover = SubResource("StyleBoxFlat_iywne")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p57ef")
theme_override_styles/normal = SubResource("StyleBoxFlat_u5sy4")
text = "Continue
"

[node name="Quit" type="Button" parent="UI/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_lbhrr")
theme_override_styles/hover = SubResource("StyleBoxFlat_iywne")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p57ef")
theme_override_styles/normal = SubResource("StyleBoxFlat_u5sy4")
text = "Quit"

[node name="Label" type="Label" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_top = 37.0
offset_right = 21.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="Label" type="Label" parent="UI"]
offset_left = 3.0
offset_top = 16.0
offset_right = 123.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 41
text = "Score:"

[node name="Score" type="Label" parent="UI"]
offset_left = 139.0
offset_top = 16.0
offset_right = 259.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 41
text = "xx"

[node name="Panel2" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -20.0
offset_right = 102.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "How long can you last"

[connection signal="pressed" from="UI/Panel/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="UI/Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
